more experience section & js tweaks

--- a/index.html
+++ b/index.html
@@ -162,50 +162,135 @@
               </p>
             </div>
           </div>
-          <div>
-            <div id="sector-grid">
+          <h4>Products I've built</h4>
+          <div id="sector-container">
+            <div class="sector-row">
               <div class="sector-card">Healthcare</div>
+              <div class="experience-wrapper">
+                Clinical trials participation and engagement app
+              </div>
+            </div>
+            <div class="sector-row">
               <div class="sector-card">Beauty & Wellness</div>
+              <div class="experience-wrapper">Skincare advice chatbot</div>
+            </div>
+            <div class="sector-row">
               <div class="sector-card">Fintech</div>
+              <div class="experience-wrapper">
+                Loan calculator for small businesses &bull; Cashflow monitoring
+                tool for business owners
+              </div>
+            </div>
+            <div class="sector-row">
               <div class="sector-card">Human Resources Tech</div>
+              <div class="experience-wrapper">
+                AI process insight generator &bull; Employee performance
+                monitoring tool &bull; Career pivoting advice and coaching app
+              </div>
+            </div>
+            <div class="sector-row">
               <div class="sector-card">Edtech</div>
+              <div class="experience-wrapper">
+                Language school management & timetabling platform
+              </div>
+            </div>
+            <div class="sector-row">
               <div class="sector-card">Consumer Goods</div>
+              <div class="experience-wrapper">
+                Secondhand furniture marketplace &bull; Personal aviation
+                vehicle marketplace
+              </div>
+            </div>
+            <div class="sector-row">
               <div class="sector-card">Real Estate</div>
+              <div class="experience-wrapper">
+                Landlord and tenant communications management app
+              </div>
             </div>
-
-            <div id="experience-grid">
-              <p>Skincare advice chatbot</p>
-              <p>Secondhand furniture marketplace</p>
-              <p>Social media insights explorer</p>
-              <p>Loan calculator</p>
-              <p>Freelancer job site</p>
-              <p>Social media platform for session musicians</p>
-              <p>Cashflow monitoring tool for business owners</p>
-              <p>Career pivoting advice solutions app</p>
-              <p>Clinical trials participation app</p>
-              <p>Language school management platform edtech tool</p>
-              <p>Landlord and tenant communications management app</p>
-              <p>AI Human Resources insight generator</p>
-              <p>Employee performance monitoring tool</p>
+            <div class="sector-row">
+              <div class="sector-card">Social Media</div>
+              <div class="experience-wrapper">
+                Trending video/audio explorer &bull; Tiktok-style social media
+                platform for session musicians &bull; Freelancer job search site
+              </div>
             </div>
+          </div>
+          <h4>Internal tooling & Process improvement</h4>
+          <p>
+            I've also enjoyed leading areas of internal development which have
+            resulted in streamlined workflows amongst the team, coding a custom
+            component for our marketplace apps.
+          </p>
+          <h4>Landing page design & development</h4>
+          <p>
+            I coded and helped design certain areas of the website, which
+            resulted in improved metrics:
+          </p>
 
-            <p>
-              I've also enjoyed leading areas of internal development which have
-              resulted in streamlined workflows amongst the team.
-            </p>
+          <div class="metric-cards">
+            <div class="metric-card">
+              <div class="metric-value">52%</div>
+              <div class="metric-description">
+                Higher engagement time per session
+              </div>
+            </div>
+            <div class="metric-card">
+              <div class="metric-value">32%</div>
+              <div class="metric-description">Decrease in bounceback rate</div>
+            </div>
           </div>
         </section>
-        <div id="personal-projects">
-          <p>Outside of work I've got a few personal projects.</p>
-          <p>
-            Live auctioning platform for bidding on last-minute cinema tickets
-            on both iOS and Android.
-          </p>
-          <p>Manage a shopify website.</p>
-          <p>
-            Case studies page: a average engagement time per session of 1m 54s,
-            which is 52% higher than the rest of the website during that time.
-          </p>
+        <!-- <div id="other-projects">
+          <h3>Recent Projects</h3>
+          <div id="experience-container">
+            <div id="screenshots-container">
+              <img
+                src="./assets/ticketdash-1.png"
+                class="screenshot"
+                alt="screenshot of ticketdash app"
+              />
+              <img
+                src="./assets/ticketdash-2.png"
+                class="screenshot"
+                alt="screenshot of ticketdash app"
+              />
+              <img
+                src="./assets/ticketdash-3.png"
+                class="screenshot"
+                alt="screenshot of ticketdash app"
+              />
+            </div>
+            <div id="verticode-description">
+              <p>
+                Ticketdash is a live auctioning platform for bidding on
+                last-minute cinema tickets on both iOS and Android.
+              </p>
+            </div>
+          </div>
+        </div> -->
+        <div class="contact-container">
+          <button class="contact-button" onclick="copyEmailToClipboard()">
+            <span class="default-text">
+              <a href="#">Say Hello</a>
+              <i class="arrow-icon fas fa-arrow-right"></i>
+            </span>
+            <div class="hover-content">
+              <div class="email-wrapper">
+                <span class="email-text" id="email">hello@tiahhind.com</span>
+                <span class="copy-confirmation" id="copy-confirmation"
+                  >email copied</span
+                >
+              </div>
+
+              <a href="https://www.linkedin.com/in/tiahhind/" target="_blank">
+                <img
+                  src="./assets/linkedin-logo.svg"
+                  class="small-icon"
+                  alt="LinkedIn Logo"
+                />
+              </a>
+            </div>
+          </button>
         </div>
         <section id="stack">
           <div class="stack-grid">
