continued mobile optimisations

--- a/index.html
+++ b/index.html
@@ -251,7 +251,6 @@
 
           <section id="sector-container" aria-labelledby="products-heading">
             <h3 id="products-heading">Products I've built</h3>
-
             <div class="sector-row">
               <div class="sector-card">Healthcare</div>
               <div class="experience-wrapper">
@@ -302,9 +301,46 @@
                 platform for session musicians &bull; Freelancer job search site
               </div>
             </div>
+            <section id="other-work">
+              <h3 id="products-heading">Other work</h3>
+              <section class="other-experience-container">
+                <h4>Internal tooling & Process improvement</h4>
+                <p>
+                  I've enjoyed leading areas of internal development which have
+                  resulted in streamlined workflows amongst the team, coding a
+                  custom component for our marketplace apps.
+                </p>
+              </section>
+              <div
+                class="metric-cards"
+                role="list"
+                aria-label="Landing page performance metrics"
+              >
+                <div class="metric-card" role="listitem">
+                  <div class="metric-value">52%</div>
+                  <div class="metric-description">
+                    Higher engagement time per session
+                  </div>
+                </div>
+                <div class="metric-card" role="listitem">
+                  <div class="metric-value">32%</div>
+                  <div class="metric-description">
+                    Decrease in bounceback rate
+                  </div>
+                </div>
+              </div>
+              <section class="other-experience-container">
+                <h4>Landing page design & development</h4>
+                <p>
+                  I coded and helped design certain areas of the website, which
+                  resulted in improved metrics:
+                </p>
+              </section>
+            </section>
           </section>
           <section id="stack" aria-labelledby="stack-heading">
-            <h2 id="stack-heading" class="visually-hidden">Tech Stack</h2>
+            <h2 id="stack-heading">Tech Stack</h2>
+
             <div class="stack-grid">
               <img
                 src="./assets/mongodb-logo.svg"
@@ -332,40 +368,11 @@
                 alt="Shopify logo"
               />
             </div>
+            <!-- <p>
+              I'm keen to learn new technologies, but these are the ones I'm
+              most experienced with.
+            </p> -->
           </section>
-          <section class="other-experience-container">
-            <h4>Internal tooling & Process improvement</h4>
-            <p>
-              I've enjoyed leading areas of internal development which have
-              resulted in streamlined workflows amongst the team, coding a
-              custom component for our marketplace apps.
-            </p>
-          </section>
-
-          <section class="other-experience-container">
-            <h4>Landing page design & development</h4>
-            <p>
-              I coded and helped design certain areas of the website, which
-              resulted in improved metrics:
-            </p>
-          </section>
-
-          <div
-            class="metric-cards"
-            role="list"
-            aria-label="Landing page performance metrics"
-          >
-            <div class="metric-card" role="listitem">
-              <div class="metric-value">52%</div>
-              <div class="metric-description">
-                Higher engagement time per session
-              </div>
-            </div>
-            <div class="metric-card" role="listitem">
-              <div class="metric-value">32%</div>
-              <div class="metric-description">Decrease in bounceback rate</div>
-            </div>
-          </div>
         </section>
 
         <div class="contact-container">
