wording & style updates

--- a/index.html
+++ b/index.html
@@ -176,9 +176,10 @@
         <section id="about" aria-labelledby="about-heading">
           <h2 id="about-heading" class="visually-hidden">About Me</h2>
           <p>
-            Specialised in the development of end-to-end tech for early-stage
-            start ups, I'm experienced in, and excited by, building products
-            that drive <b>meaningful user adoption</b> and <b>retention.</b>
+            Specialised in the development of <b>end-to-end tech</b> for
+            <b>early-stage start ups</b>, I'm experienced in, and excited by,
+            building products that drive <b>meaningful user adoption</b> and
+            <b>retention.</b>
           </p>
         </section>
 
@@ -214,8 +215,8 @@
               ></i>
               <h3 class="passion-title">Elegant solutions<br />to problems</h3>
               <p class="passion-description">
-                Complex functionality doesn't need a complex interface.<br />
-                I'm enthusiastic about crafting sleek, intuitive UX.
+                Complex functionality doesn't need a complex interface. I'm
+                enthusiastic about crafting sleek, intuitive UX.
               </p>
             </article>
 
@@ -269,7 +270,7 @@
               </div>
             </div>
             <div class="sector-row">
-              <div class="sector-card">Human Resources Tech</div>
+              <div class="sector-card">Human Resources</div>
               <div class="experience-wrapper">
                 AI process insight generator &bull; Employee performance
                 monitoring tool &bull; Career pivoting advice and coaching app
@@ -302,15 +303,18 @@
               </div>
             </div>
             <section id="other-work">
-              <h3 id="products-heading">Other work</h3>
+              <h3 id="work-heading">Other work</h3>
               <section class="other-experience-container">
-                <h4>Internal tooling & Process improvement</h4>
+                <h4>Landing page design & development</h4>
                 <p>
-                  I've enjoyed leading areas of internal development which have
-                  resulted in streamlined workflows amongst the team, coding a
-                  custom component for our marketplace apps.
+                  I aided to the redesign and front-end development of key
+                  sections of the company's website, focusing on enhancing user
+                  experience and optimizing layout performance. These
+                  improvements led to measurable success, indicating stronger
+                  user interest and retention and better content relevance.
                 </p>
               </section>
+
               <div
                 class="metric-cards"
                 role="list"
@@ -330,10 +334,18 @@
                 </div>
               </div>
               <section class="other-experience-container">
-                <h4>Landing page design & development</h4>
+                <h4>Internal tooling & Process improvement</h4>
                 <p>
-                  I coded and helped design certain areas of the website, which
-                  resulted in improved metrics:
+                  I've enjoyed leading areas of internal development which have
+                  resulted in streamlined workflows amongst the team. One of my
+                  core contributions was architecting and implementing a custom,
+                  reusable data-fetching component to be used in marketplace
+                  apps. This component not only streamlined data retrieval and
+                  display, but also introduced dynamic filtering capabilities,
+                  significantly reducing development time for similar features
+                  and enhancing the overall user experience. The solution
+                  improved cross-team collaboration and served as a template for
+                  future internal tools.
                 </p>
               </section>
             </section>
