--- a/index.html
+++ b/index.html
@@ -117,6 +117,7 @@
   </head>
   <body>
     <header role="banner">
+      <a href="#main-content" class="skip-link">Skip to main content</a>
       <nav role="navigation" aria-label="Primary">
         <div class="logo"><a href="/">Tiah Hind</a></div>
         <div class="contact-container">
@@ -172,7 +173,7 @@
         </figure>
       </section>
 
-      <div class="page-container">
+      <div class="page-container" id="main-content">
         <section id="about" aria-labelledby="about-heading">
           <h2 id="about-heading" class="visually-hidden">About Me</h2>
           <p>
